# stonkWhisperer

./: .gitignore  docker-compose.yml  light-container.yml
.github/workflows/: docker-image.yml
data_pipeline/: .dockerignore  Dockerfile  celery_app.py  main.py  migration.py  pyproject.toml
data_pipeline/core/: constants.py  database.py  settings.py
data_pipeline/flows/: alpaca_etl_flow.py  main.py  news_etl_flow.py  praw_etl_flow.py
data_pipeline/migrations/: env.py
data_pipeline/migrations/versions/: 0760ed71f445_removed_redundant_source_name_and_.py  18bb12ac9627_increase_author_column_to_500_characters.py  5e4ae4a1e6e8_add_nullable_article_columns_in_reddit_posts.py  72dff12e69d7_make_sentiment_column_in_the_articles_.py  79c98c387ae9_add_relationship_between_articles_and_.py  ba95bd6af949_.py  cfab4ab3c120_implement_1_m_relationship_between_.py  e26643b1dbdd_.py
data_pipeline/models/: __init__.py  article.py  company.py  reddit_post.py  stock_bar.py
data_pipeline/services/: __init__.py  article_service.py  company_service.py  reddit_post_service.py  stock_bar_service.py
data_pipeline/tasks/: extraction.py  load_to_s3.py  loading.py  transformation.py  trigger_databricks_job.py
docs/: Type of news.md
